--- a/css/about.css
+++ b/css/about.css
@@ -565,7 +565,7 @@ nav a.active {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("footerBack.jpg");
+  background-image: url("../Images/footerBack.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
